syntax = "proto3";

option csharp_namespace = "Server.Abstract";

package bidirectionalStreaming;

// The service is sample of bidirectional streaming example.
service BidirectionalStreaming {
  rpc StartChant (stream StartChantRequest) returns (stream StartChantReply);
}

message StartChantRequest {
  string userName = 1;
  string message = 2;
}
message StartChantReply{
  string userName = 1;
  string message = 2;
}